--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <title> Ana De La Cadena </title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-
+    <h1> Hello, Code School! </h1>
+    <ul>
+      <li>php</li>
+      <li>javascript</li>
+      <li>node</li>
+      <li>github</li>
+      <li>web developer</li>
+      <li>web designer</li>
+    </ul>
   </body>
 </html>
